# public-appservice

./: .gitignore  Cargo.toml  README.md  build.rs  config-sample.toml  engage.toml  flake.nix  rust-toolchain.toml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  deploy.yml  nix-ci.yml  release.yml
docs/: security.md
src/: api.rs  appservice.rs  args.rs  board.rs  cache.rs  cli.rs  config.rs  constants.rs  db.rs  error.rs  lib.rs  log.rs  logging.rs  main.rs  middleware.rs  oidc.rs  ping.rs  requests.rs  rooms.rs  server.rs  space.rs  utils.rs
src/api/: event.rs  ping.rs
src/error/: serve.rs  startup.rs
src/server/: ext.rs
