[package]
name = "public-appservice"
version = "0.2.0"
description = "An appservice to make Matrix spaces publicly accessible."
license = "AGPL-3.0"
authors = ["ChurchOfTheSubgenius <mail@hummingbard.com>"]
keywords = ["matrix", "appservice", "public"]
repository = "https://github.com/commune-sh/public-appservice"
edition = "2024"

[dependencies]
anyhow = "1.0.93"
axum = "0.8.3"
bytes = "1.10.1"
clap = { version = "4.5.23", features = ["derive"] }
futures = "0.3.31"
http = "1.1.0"
hyper = { version = "1.5.1", features = ["full"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.10", features = ["client", "client-legacy", "http2"] }
once_cell = "1.20.2"
redis = { version = "0.27.5", features = ["tokio-comp"] }
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json"] }
ruma = { version = "0.12.3", features = ["appservice-api-c", "client-hyper-native-tls", "client-api-c", "client-ext-client-api"] }
sentry = { version = "0.41.0", features = ["tracing"] }
sentry-tracing = "0.41.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha2 = "0.10.9"
thiserror = "2.0.3"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.19"
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["cors", "normalize-path", "trace"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4"] }

[profile.dev]
debug = 0
strip = "debuginfo"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(ruma_unstable_exhaustive_types)', 
] }
