[package]
name = "public-appservice"
version = "0.2.4"
description = "An appservice to make Matrix spaces publicly accessible."
license = "AGPL-3.0"
authors = ["ChurchOfTheSubgenius <mail@hummingbard.com>"]
keywords = ["matrix", "appservice", "public"]
repository = "https://github.com/commune-sh/public-appservice"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
axum = "0.8.4"
bytes = "1.10.1"
clap = { version = "4.5.47", features = ["derive"] }
futures = "0.3.31"
http = "1.3.1"
hyper = { version = "1.7.0", features = ["full"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.17", features = ["client", "client-legacy", "http2"] }
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
once_cell = "1.21.3"
redis = { version = "0.32.5", features = ["tokio-comp"] }
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["json", "native-tls"] }
ruma = { version = "0.13.0", features = ["appservice-api-c", "client-api-c"] }
ruma-client = { version = "0.16.0", features = ["client-api", "reqwest"] }
sentry = { version = "0.41.0", features = ["tracing"] }
sentry-tracing = "0.41.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tempfile = "3.22.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.8.23"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "normalize-path", "trace"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }

[profile.dev]
debug = 0
strip = "debuginfo"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(ruma_unstable_exhaustive_types)', 
] }
